dark mode fix

--- a/src/dark.css
+++ b/src/dark.css
@@ -7,6 +7,7 @@
     -fx-text-fill: #e0e0e0;
 }
 
+
 .button {
     -fx-background-color: #444444;
     -fx-text-fill: #e0e0e0;
@@ -20,4 +21,12 @@
 
 .table-view {
     -fx-background-color: #3b3b3b;
+}
+
+#mainLable {
+    -fx-text-fill: #e0e0e0 !important;
+}
+
+#mainLabel {
+    -fx-text-fill: #e0e0e0 !important;
 }
